fix: Ajusta nome da referencia

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <p>Sempre utilizei planilhas eletrônicas para realizar o controle das minhas finanças, porém, acabava deixando de lado pela dificuldade de manter tudo atualizado. Com o dev.finance, em 5 minutos consigo atualizar tudo o que aconteceu no dia e tirar insights das visões e gráficos que são gerados.</p>
           <div class="person">
             <img src="assets/user.svg" alt="">
-            <p>Artur Santiago</p>
+            <p>João Pedro</p>
           </div>
           <div class="controls">
             <button class="back">
